- Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
- Unknown `--enable-plugin` names now fail closed with `ADAPTER_PLUGIN_UNKNOWN` (no silent plugin-name fallback/ignore).
- Unknown plugin names are validated before adapter routing, so `ADAPTER_PLUGIN_UNKNOWN` also fails closed under `--adapter none`.
- Adapter plugin strictness tests now pin this behavior under both `--adapter none` and `--adapter auto` (including auto no-class-match cases).
- `safe-run --enable-plugin` now fails closed when plugin value is missing (`INPUT_INVALID`) instead of silently ignoring malformed flags.
- `safe-run` now rejects unsupported flags with `INPUT_INVALID` (for example typoed flags like `--adpater`) instead of silently ignoring them.
- `safe-run` now fails closed for unexpected extra positional arguments and for conflicting `--execute` + `--withhold-exec|--no-exec` flag combinations.
- `safe-run` now fails closed when known value flags are provided without values (for example `--adapter` with no value) instead of silently falling back.
- CLI flag parsing now preserves missing-value semantics when a value flag is followed by another flag token (for example `--out --adapter ...`) instead of mis-parsing the next flag as a value.
- `safe-run` now fails closed on duplicate singleton flags (for example repeated `--adapter` or repeated `--out`) instead of silently using the last value.
- `safe-run --adapter none` now fails closed when plugin flags are provided (`ADAPTER_PLUGIN_UNUSED`) instead of silently ignoring plugin config.
- `safe-run` now fails closed with `ADAPTER_PLUGIN_UNUSED` when plugin flags are provided for non-plugin routes (for example `--adapter auto` no-class-match or explicit non-plugin adapters like `document`).
- New adapter discovery command: `weftend adapter list`
- Additive receipt/summary surface:
- `safe_run_receipt.json` optional `adapter` metadata block