@@ -12,6 +12,7 @@ Hard rules
 - Plugin paths activate only with explicit `--enable-plugin <name>`.
 - Plugin names are recorded in adapter metadata and reason codes.
 - Missing plugin names are invalid input and fail closed.
+- Duplicate plugin names are invalid input and fail closed.
 
 3) Local-only behavior
 - Plugin commands must run locally and read-only for the target artifact.
@@ -21,6 +22,7 @@ Hard rules
 - If a plugin-required format is selected and plugin is not enabled, run fails with explicit code.
 - If plugin is enabled but unavailable, run fails with explicit code.
 - If an unknown plugin name is provided, run fails closed with `ADAPTER_PLUGIN_UNKNOWN`.
+- If duplicate plugin names are provided, run fails closed with `ADAPTER_PLUGIN_DUPLICATE`.
 - Unknown plugin-name validation runs before adapter routing and still fails closed under `--adapter none`.
 - If `--adapter none` is selected, any plugin flag is invalid and fails closed with `ADAPTER_PLUGIN_UNUSED`.
 - If `--adapter auto` has no class match and plugin flags were provided, run fails closed with `ADAPTER_PLUGIN_UNUSED`.
